--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ body,html{
     background-color: #6DD2E0;
 }
 
-.card{
+.card:hover{
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
     transition: all .2s ease-in-out;
 }
